dom/serviceworkers/ServiceWorkerPrivate.h
@@ -103,6 +103,8 @@ class ServiceWorkerPrivate final {
   NS_DECL_OWNINGTHREAD
 
  public:
+  // TODO: remove this class. There's one (and only should be one) concrete
+  // class that derives this abstract base class.
   class Inner {
    public:
     NS_INLINE_DECL_PURE_VIRTUAL_REFCOUNTING
@@ -202,6 +204,16 @@ class ServiceWorkerPrivate final {
 
   bool IsIdle() const;
 
+  // This promise is used schedule clearing of the owning registrations and its
+  // associated Service Workers if that registration becomes "unreachable" by
+  // the ServiceWorkerManager. This occurs under two conditions, which are the
+  // preconditions to calling this method:
+  // - The owning registration must be unregistered.
+  // - The associated Service Worker must *not* be controlling clients.
+  //
+  // Additionally, perhaps stating the obvious, the associated Service Worker
+  // must *not* be idle (whatever must be done "when idle" can just be done
+  // immediately).
   RefPtr<GenericPromise> GetIdlePromise();
 
   void SetHandlesFetch(bool aValue);
